@@ -27,6 +27,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+06-Oct-2009 Ron Severdia
+# BlueStork CSS cleanup
+# Layout fixes for com_contact, com_menus, com_users, com_weblinks
+
 06-Oct-2009 Andrew Eddie
 ^ Loop optimisation in JDocumentHTML::countModules
 
